fix nav bar messages on small screens

--- a/css/community.css
+++ b/css/community.css
@@ -69,7 +69,7 @@ community
     margin: 170px auto;
     width: 700px;
     padding: 30px 0 0;
-    height: 400px;
+    height: 300px;
     display: block;
     background-color: rgba(0, 0, 0, 0.41);
     text-align: center;
